--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@types/underscore": "^1.10.22",
+    "bootstrap": "^4.5.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "underscore": "^1.11.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
