--- a/angular.json
+++ b/angular.json
@@ -88,6 +88,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
+              "src/assests",
               "src/favicon.ico",
               "src/assets"
             ],
